name:                site-builder
version:             0.1.0.0
homepage:            https://github.com/kirikaza/my_site#readme
license:             BSD3
license-file:        site-builder.LICENSE
author:              Kirill Kazakov
maintainer:          k@kirikaza.ru
copyright:           2018 Kirill Kazakov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable site-builder
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
